--- a/app/src/main/res/navigation/picasso_nav.xml
+++ b/app/src/main/res/navigation/picasso_nav.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_nav"
     app:startDestination="@+id/home2">
 
     <fragment
         android:id="@+id/home2"
         android:name="com.eb.picasso.screens.home.Home"
-        android:label="Home"></fragment>
+        android:label="Home">
+        <action
+            android:id="@+id/action_home2_to_detailActivity"
+            app:destination="@id/detailActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/detailActivity"
+        android:name="com.eb.picasso.screens.DetailActivity"
+        android:label="activity_detail"
+        tools:layout="@layout/activity_detail" />
 
 </navigation>
